--- a/src/jaytwo.WeightsAndMeasures.Length/jaytwo.WeightsAndMeasures.Length.csproj
+++ b/src/jaytwo.WeightsAndMeasures.Length/jaytwo.WeightsAndMeasures.Length.csproj
@@ -3,8 +3,9 @@
   <PropertyGroup>
     <TargetFrameworks>net45;netstandard1.1;netstandard1.3;netstandard1.6;netstandard2.0</TargetFrameworks>
     <VersionPrefix>0.1.0</VersionPrefix>
-    <RepositoryUrl>https://github.com/jakegough/jaytwo.WeightsAndMeasures.Length</RepositoryUrl>
     <RootNamespace>jaytwo.WeightsAndMeasures</RootNamespace>
+    <RepositoryUrl>https://github.com/jakegough/jaytwo.WeightsAndMeasures.Length</RepositoryUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)' == 'net45'">
